--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "s": "yarn run develop",
     "format": "prettier --write src/**/*.{js,jsx}",
     "start": "npm run develop",
     "serve": "gatsby serve",
