Adding new base theme for blog list # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # # On branch serifed-and-monospaced # Changes to be committed: #	modified:   gatsby-browser.js #	modified:   package.json #	modified:   src/components/layout/header.js #	modified:   src/components/link.js #	modified:   src/components/post-summary.js #	new file:   src/utils/theme.js #	modified:   src/utils/typography.js #	modified:   yarn.lock #

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "styled-components": "^4.3.2",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
+    "typeface-anonymous-pro": "^0.0.72",
+    "typeface-katibeh": "^0.0.61",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19"
   },
