--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "gatsby-starter-blog",
-  "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "name": "cmarlow",
+  "description": "Blog posts, Photos, and other things I want to share on the web",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Christopher Marlow",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/perrupa/cmarlow/issues"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
@@ -42,8 +41,13 @@
   "devDependencies": {
     "prettier": "^1.17.0"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://cmarlow.com",
   "keywords": [
+    "programming",
+    "photography",
+    "javascript",
+    "personal site",
+    "blog",
     "gatsby"
   ],
   "license": "MIT",
