Updating Gatsby, react and sass
Server works and generates pages, but with errors. Many gatsby plugins
may require updates to v2+

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.4.2",
+    "gatsby": "5.11",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-feed": "^2.2.0",
     "gatsby-plugin-google-analytics": "^2.0.19",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sass": "^6.11.0",
     "gatsby-plugin-sharp": "^2.0.36",
     "gatsby-plugin-styled-components": "^3.1.3",
     "gatsby-plugin-typography": "^2.2.13",
@@ -27,13 +27,13 @@
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.3.12",
     "gatsby-transformer-sharp": "^2.1.19",
-    "node-sass": "^4.13.1",
     "polished": "^3.4.1",
     "prismjs": "^1.16.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^18",
+    "react-dom": "^18",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "sass": "^1.64.2",
     "styled-components": "^4.3.2",
     "typeface-anonymous-pro": "^0.0.72",
     "typeface-katibeh": "^0.0.61",
