--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "5.11",
-    "gatsby-image": "^2.0.41",
-    "gatsby-plugin-feed": "^2.2.0",
-    "gatsby-plugin-google-analytics": "^2.0.19",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sass": "^6.11.0",
-    "gatsby-plugin-sharp": "^2.0.36",
-    "gatsby-plugin-styled-components": "^3.1.3",
-    "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-remark-copy-linked-files": "^2.0.12",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.2.9",
-    "gatsby-remark-responsive-iframe": "^2.1.1",
-    "gatsby-remark-smartypants": "^2.0.9",
-    "gatsby-source-filesystem": "^2.0.33",
-    "gatsby-transformer-remark": "^2.3.12",
-    "gatsby-transformer-sharp": "^2.1.19",
+    "gatsby-image": "^3",
+    "gatsby-plugin-feed": "^5",
+    "gatsby-plugin-google-analytics": "^5",
+    "gatsby-plugin-manifest": "^5",
+    "gatsby-plugin-offline": "^6",
+    "gatsby-plugin-react-helmet": "^6",
+    "gatsby-plugin-sass": "^6",
+    "gatsby-plugin-sharp": "^5",
+    "gatsby-plugin-styled-components": "^6",
+    "gatsby-plugin-typography": "^5",
+    "gatsby-remark-copy-linked-files": "^6",
+    "gatsby-remark-images": "^7",
+    "gatsby-remark-prismjs": "^7",
+    "gatsby-remark-responsive-iframe": "^6",
+    "gatsby-remark-smartypants": "^6",
+    "gatsby-source-filesystem": "^5",
+    "gatsby-transformer-remark": "^6",
+    "gatsby-transformer-sharp": "^5",
     "polished": "^3.4.1",
     "prismjs": "^1.16.0",
     "react": "^18",
@@ -34,7 +34,8 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "sass": "^1.64.2",
-    "styled-components": "^4.3.2",
+    "sharp": "^0.32.4",
+    "styled-components": "^6",
     "typeface-anonymous-pro": "^0.0.72",
     "typeface-katibeh": "^0.0.61",
     "typography": "^0.16.19",
